# ERGO

./: .gitignore  README.md  pyproject.toml
data/: README.md
demo/: __init__.py  app.py  config.py  inference.py  models.py  run.py  ui.py  utils.py
scripts/: run_vllm.sh
src/ergo/: const.py  eval.py  infer.py  utils.py
